saas/k8s/003-data/800-mlflow/10-mysql-metadata_backend.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: data
spec:
  ports:
  - port: 3306
  selector:
    app: mysql

---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: data
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:8.0.19
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: ~/.mysql
      volumes:
        - emptyDir: {}
          name: mysql-persistent-storage
